--- a/src/styles.css
+++ b/src/styles.css
@@ -157,49 +157,24 @@ th, td {
 
 /* View */
 
-table, 
-tr {
-  border: 1px solid black;
+/* Child */
+
+#child {
+  padding-top: 70px;
+  display: flex;
+  flex-direction: column;
 }
 
-/* Footer styles (Main Module) */
-
-
-/* Media queries */
-
-
-
-
-/* CHILD */
-
-/* body {
-  font-family: "Open Sans",
-  sans-serif;
-  font-size: 20px;
-  color: #444;
-  text-align: center;
-  line-height: 1.5;
-}
-
-#quit {
-  padding: 1% 0;
-  background-color: #aaa;
+#exit-child-view {
+  align-self: center;
+  margin: 5px;
   position: fixed;
   top: 0;
-  right: 0;
   z-index: 10;
-  border: 1px solid black;
-  font-size: 1.5em;
-  width: 50px;
-  height: 50px;
+  font-size: 2em;
 }
 
-main {
-  padding-top: 80px;
-  background-color: #ddd;
-}
-
-.videos-display {
+/* .videos-display {
   max-width: 1000px;
   margin: auto;
 }
@@ -233,8 +208,6 @@ ul {
   padding: 10px;
 }
 
-
-
 body, html {
   height: 100%;
   margin: 0;
@@ -246,3 +219,11 @@ body, html {
   top: 0;
   left: 0;
 } */
+
+/* Footer styles (Main Module) */
+
+
+/* Media queries */
+
+
+
