--- a/src/styles.css
+++ b/src/styles.css
@@ -165,18 +165,21 @@ th, td {
   flex-direction: column;
 }
 
-#exit-child-view {
-  align-self: center;
-  margin: 5px;
+nav {
+  display: flex;
+  justify-content: space-around;
+  height: 65px;
   position: fixed;
   top: 0;
   z-index: 10;
   font-size: 2em;
+  width: 100%;
+  background-color: white;
+  border-bottom: 1px solid black;
 }
 
-/* .videos-display {
-  max-width: 1000px;
-  margin: auto;
+nav button {
+  border: none;
 }
 
 .videos-placeholder {
@@ -187,8 +190,8 @@ th, td {
 
 li {
   background-color: #444;
-  width: 280px;
-  height: 130px;
+  width: 80%;
+  height: auto;
   margin: 10px;
   border-radius: 10px;
 }
@@ -198,27 +201,6 @@ li div {
   height: 100%;
   width: 100%;
 }
-
-ul {
-  list-style: none;
-}
-
-#refresh {
-  margin: 20px 0;
-  padding: 10px;
-}
-
-body, html {
-  height: 100%;
-  margin: 0;
-}
-.fullScreen {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-} */
 
 /* Footer styles (Main Module) */
 
